<?xml version="1.0"?>
<package format="2">
  <name>gazebo_factory_world</name>
  <version>0.0.0</version>
  <description>Factory world for Gazebo based on ARIAC 2017 models</description>

  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>

  <license>TODO</license>

  <url type="website">https://aisl-serv6.aisl.cs.tut.ac.jp:20443/fujimoto/gazebo_factory_world</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
